--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Skyscraper Facts</title>
+    </head>
+    <body>
 
+        <form action="/showFact">
+          <select name="skyscraper"> <!-- A select element creates a drop-down box with options to select from. Note: add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
+            {% for s in states %} <!-- Loop through the list of states and add an option element for each state -->
+                <option value="{{ s }}">{{ s }}</option>
+            {% endfor %}
+          </select>
+          <br><br>
+          <input type="submit" value="Get a fun fact!">
+        </form>
+        <div id="funFact">
+            <p>{{ funFact }}</p>
+        </div>
+
+    </body>
+</html>
